Upgrade to Reactor Netty 0.6.1.RELEASE
Closes gh-525

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -144,7 +144,7 @@
 		<rabbit-amqp-client.version>4.0.2</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.1.0.RELEASE</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0</reactive-streams.version>
-		<reactor-netty.version>0.6.0.BUILD-SNAPSHOT</reactor-netty.version>
+		<reactor-netty.version>0.6.1.RELEASE</reactor-netty.version>
 		<rest-assured.version>2.9.0</rest-assured.version>
 		<rometools.version>1.7.1</rometools.version>
 		<rxnetty.version>0.5.2-rc.4</rxnetty.version>
