--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -78,7 +78,7 @@
 		<evo-inflector.version>1.2.2</evo-inflector.version>
 		<findbugs-jsr305.version>3.0.1</findbugs-jsr305.version>
 		<findbugs-annotations.version>2.0.3</findbugs-annotations.version>
-		<gemfire.version>9.0.0-beta.1</gemfire.version>
+		<gemfire.version>9.0.1</gemfire.version>
 		<guava.version>20.0</guava.version>
 		<guice.version>3.0</guice.version>
 		<hadoop.version>2.2.0</hadoop.version>
