--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -147,7 +147,7 @@
 		<reactor-netty.version>0.6.1.RELEASE</reactor-netty.version>
 		<rest-assured.version>2.9.0</rest-assured.version>
 		<rometools.version>1.7.1</rometools.version>
-		<rxnetty.version>0.5.2-rc.4</rxnetty.version>
+		<rxnetty.version>0.5.2</rxnetty.version>
 		<selenium-htmlunit-driver.version>${selenium.version}</selenium-htmlunit-driver.version>
 		<smack4.version>4.1.9</smack4.version>
 		<splunk.version>1.3.0</splunk.version>
