--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.7.0.RELEASE
+      version: 1.7.1.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -62,7 +62,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.2.BUILD-SNAPSHOT
+      version: 1.5.2.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -139,53 +139,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.0.RELEASE
+      version: 1.5.1.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.0.RELEASE
+      version: 1.13.1.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.0.RELEASE
+      version: 2.2.1.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.0.RELEASE
+      version: 2.1.1.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.0.RELEASE
+      version: 1.1.1.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.0.RELEASE
+      version: 1.9.1.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.0.RELEASE
+      version: 1.11.1.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.0.RELEASE
+      version: 1.2.1.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.0.RELEASE
+      version: 1.0.1.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.0.RELEASE
+      version: 1.10.1.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -193,29 +193,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.0.RELEASE
+      version: 4.2.1.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.0.RELEASE
+      version: 1.8.1.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.0.RELEASE
+      version: 2.6.1.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.0.RELEASE
+      version: 2.1.1.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.7.BUILD-SNAPSHOT
+      version: 4.3.7.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -244,7 +244,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.7.RELEASE
+      version: 4.3.8.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -369,7 +369,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.1.RELEASE
+      version: 4.2.2.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -396,7 +396,7 @@ platform_definition:
        - spring-security-jwt
     - name: Spring Security OAuth
       groupId: org.springframework.security.oauth
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-security-oauth
         - spring-security-oauth2
@@ -681,7 +681,8 @@ platform_definition:
       - 'org.xerial:sqlite-jdbc'
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
-    'com.fasterxml.jackson.core:jackson-annotations': '2.8.6'
+    'com.fasterxml.jackson.core:jackson-annotations': '2.8.7'
+    'com.gemstone.gemfire:gemfire': '8.2.3'
     'org.aspectj:aspectjweaver': '1.8.10'
     'org.aspectj:aspectjrt': '1.8.10'
     'org.webjars:hal-browser': '3325375'
