Align with latest Spring Boot 2.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -528,9 +528,12 @@ platform_definition:
       - 'io.dropwizard.metrics:metrics-graphite'
       - 'io.dropwizard.metrics:metrics-servlets'
       - 'io.javaslang:javaslang-match'
+      - 'io.netty:netty-codec'
+      - 'io.netty:netty-codec-http'
       - 'io.netty:netty-codec-socks'
       - 'io.netty:netty-codec-stomp'
       - 'io.netty:netty-common'
+      - 'io.netty:netty-handler'
       - 'io.netty:netty-handler-proxy'
       - 'io.netty:netty-resolver-dns'
       - 'io.netty:netty-transport'
