--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -87,6 +87,7 @@
 		<hive.version>0.12.0</hive.version>
 		<ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
 		<itext.version>2.1.7</itext.version>
+		<jackson.version>2.9.0.pr1</jackson.version>
 		<jackson1.version>1.9.13</jackson1.version>
 		<jamon.version>2.81</jamon.version>
 		<javaslang.version>2.0.5</javaslang.version>
@@ -142,7 +143,6 @@
 		<rabbit-amqp-client.version>4.1.0</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.1.1.RELEASE</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0</reactive-streams.version>
-		<reactor-netty.version>0.6.1.RELEASE</reactor-netty.version>
 		<rest-assured.version>2.9.0</rest-assured.version>
 		<rometools.version>1.7.1</rometools.version>
 		<rxnetty.version>0.5.2</rxnetty.version>
@@ -467,11 +467,6 @@
 				<groupId>io.pivotal.gemfire</groupId>
 				<artifactId>geode-wan</artifactId>
 				<version>${gemfire.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.projectreactor.ipc</groupId>
-				<artifactId>reactor-netty</artifactId>
-				<version>${reactor-netty.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.reactivex</groupId>
