--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.0.5.RELEASE
+      version: 3.0.6.BUILD-SNAPSHOT
       modules:
         - reactor-core
       build:
