Add dependency management for org.apache.kafka:kafka-streams
Closes gh-546

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -644,6 +644,11 @@
 				<version>${kafka.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka-streams</artifactId>
+				<version>${kafka.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.myfaces.core</groupId>
 				<artifactId>myfaces-impl</artifactId>
 				<version>${myfaces.version}</version>
