--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -212,7 +212,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.7.RELEASE
+      version: 4.3.8.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -241,7 +241,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.8.RELEASE
+      version: 4.3.9.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         runTestsWith:
@@ -326,7 +326,7 @@ platform_definition:
         - spring-ldap-test
     - name: Spring Loaded
       groupId: org.springframework
-      version: 1.2.6.RELEASE
+      version: 1.2.7.RELEASE
       modules:
        - springloaded
     - name: Spring Mobile
@@ -624,18 +624,18 @@ platform_definition:
     'org.apache.derby:derby': '10.13.1.1'
     'org.apache.derby:derbyclient': '10.13.1.1'
     'org.hsqldb:hsqldb': '2.3.4'
-    'io.netty:netty-all': '4.1.7.Final'
+    'io.netty:netty-all': '4.1.8.Final'
     'javax.jdo:jdo-api': '3.1'
-    'org.hibernate:hibernate-core': '5.2.8.Final'
+    'org.hibernate:hibernate-core': '5.2.9.Final'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
     'org.seleniumhq.selenium:htmlunit-driver': '2.23.2'
     'org.skyscreamer:jsonassert': '1.4.0'
     'com.google.code.gson:gson': '2.8.0'
     'com.rometools:rome': '1.7.1'
     'com.squareup.okhttp3:okhttp': '3.6.0'
-    'org.eclipse.jetty:jetty-client': '9.4.1.v20170120'
-    'org.eclipse.jetty.websocket:websocket-client': '9.4.1.v20170120'
-    'org.eclipse.jetty.websocket:websocket-server': '9.4.1.v20170120'
+    'org.eclipse.jetty:jetty-client': '9.4.3.v20170317'
+    'org.eclipse.jetty.websocket:websocket-client': '9.4.3.v20170317'
+    'org.eclipse.jetty.websocket:websocket-server': '9.4.3.v20170317'
     'org.springframework.ldap:spring-ldap-core': '2.2.0.RELEASE'
   repositories:
       - id: central
