--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,14 +2,14 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.9
+      version: 1.8.10
       modules:
         - aspectjweaver
         - aspectjtools
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.0.6.BUILD-SNAPSHOT
+      version: 3.0.6.RELEASE
       modules:
         - reactor-core
       build:
