--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.7.1.RELEASE
+      version: 1.7.2.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -139,53 +139,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.1.RELEASE
+      version: 1.5.3.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.1.RELEASE
+      version: 1.13.3.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.1.RELEASE
+      version: 2.2.3.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.1.RELEASE
+      version: 2.1.3.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.1.RELEASE
+      version: 1.1.3.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.1.RELEASE
+      version: 1.9.3.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.1.RELEASE
+      version: 1.11.3.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.1.RELEASE
+      version: 1.2.3.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.1.RELEASE
+      version: 1.0.3.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.1.RELEASE
+      version: 1.10.3.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -193,24 +193,24 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.1.RELEASE
+      version: 4.2.3.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.1.RELEASE
+      version: 1.8.3.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.1.RELEASE
+      version: 2.6.3.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.1.RELEASE
+      version: 2.1.3.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -317,7 +317,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 1.1.3.RELEASE
+      version: 1.1.4.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -510,6 +510,7 @@ platform_definition:
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
+      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-ion'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-properties'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-protobuf'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile'
