--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -62,7 +62,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.3.BUILD-SNAPSHOT
+      version: 1.5.3.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
