--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -117,7 +117,7 @@
 		<junit-jupiter.version>5.0.0-M4</junit-jupiter.version>
 		<kafka.version>0.10.2.0</kafka.version>
 		<kite.version>0.13.0</kite.version>
-		<kotlin.version>1.1.1</kotlin.version>
+		<kotlin.version>1.1.2-eap-73</kotlin.version>
 		<kryo.version>3.0.3</kryo.version>
 		<ldapbp.version>1.0</ldapbp.version>
 		<ldapsdk.version>4.1</ldapsdk.version>
