Align with latest Spring Boot 2.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -532,9 +532,17 @@ platform_definition:
       - 'io.dropwizard.metrics:metrics-servlets'
       - 'io.javaslang:javaslang-match'
       - 'io.netty:netty-codec'
+      - 'io.netty:netty-codec-dns'
+      - 'io.netty:netty-codec-haproxy'
       - 'io.netty:netty-codec-http'
+      - 'io.netty:netty-codec-http2'
+      - 'io.netty:netty-codec-memcache'
+      - 'io.netty:netty-codec-mqtt'
+      - 'io.netty:netty-codec-redis'
+      - 'io.netty:netty-codec-smtp'
       - 'io.netty:netty-codec-socks'
       - 'io.netty:netty-codec-stomp'
+      - 'io.netty:netty-codec-xml'
       - 'io.netty:netty-common'
       - 'io.netty:netty-handler'
       - 'io.netty:netty-handler-proxy'
