--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -331,7 +331,7 @@ platform_definition:
         - spring-plugin-metadata
     - name: Spring REST Docs
       groupId: org.springframework.restdocs
-      version: 1.2.0.RELEASE
+      version: 1.2.1.BUILD-SNAPSHOT
       modules:
         - spring-restdocs-asciidoctor
         - spring-restdocs-core
@@ -659,6 +659,12 @@ platform_definition:
       - 'org.firebirdsql.jdbc:jaybird-jdk16'
       - 'org.firebirdsql.jdbc:jaybird-jdk17'
       - 'org.firebirdsql.jdbc:jaybird-jdk18'
+      - 'org.glassfish.jersey.bundles.repackaged:jersey-guava'
+      - 'org.glassfish.jersey.media:jersey-media-jaxb'
+      - 'org.glassfish.jersey.core:jersey-client'
+      - 'org.glassfish.jersey.media:jersey-media-multipart'
+      - 'org.glassfish.jersey.ext:jersey-entity-filtering'
+      - 'org.glassfish.jersey.core:jersey-common'
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-java8'
       - 'org.hibernate:hibernate-jpamodelgen'
