--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.0.BUILD-SNAPSHOT
+      version: 3.1.0.M1
       modules:
         - reactor-core
       build:
@@ -76,6 +76,7 @@ platform_definition:
         - spring-boot-starter-data-mongodb-reactive
         - spring-boot-starter-data-neo4j
         - spring-boot-starter-data-redis
+        - spring-boot-starter-data-redis-reactive
         - spring-boot-starter-data-rest
         - spring-boot-starter-data-solr
         - spring-boot-starter-freemarker
@@ -483,9 +484,7 @@ platform_definition:
       # that both it and the rest of the Platform do not depend upon directly
       - 'ch.qos.logback:logback-access'
       - 'ch.qos.logback:logback-core'
-      - 'commons-digester:commons-digester'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
-      - 'com.fasterxml:classmate'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-ion'
@@ -521,12 +520,14 @@ platform_definition:
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.10'
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.11'
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.12'
+      - 'com.fasterxml:classmate'
       - 'com.google.appengine:appengine-api-1.0-sdk'
       - 'com.hazelcast:hazelcast-client'
       - 'com.hazelcast:hazelcast-hibernate52'
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.microsoft.sqlserver:mssql-jdbc'
       - 'com.nimbusds:nimbus-jose-jwt'
+      - 'commons-digester:commons-digester'
       - 'commons-digester:commons-digester'
       - 'io.dropwizard.metrics:metrics-ganglia'
       - 'io.dropwizard.metrics:metrics-graphite'
@@ -555,9 +556,11 @@ platform_definition:
       - 'io.netty:netty-transport-rxtx'
       - 'io.netty:netty-transport-sctp'
       - 'io.netty:netty-transport-udt'
-      - 'io.projectreactor.addons:reactor-logback'
       - 'io.projectreactor.addons:reactor-adapter'
+      - 'io.projectreactor.addons:reactor-extra'
+      - 'io.projectreactor.addons:reactor-logback'
       - 'io.projectreactor.ipc:reactor-ipc'
+      - 'io.projectreactor.kafka:reactor-kafka'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
       - 'net.bytebuddy:byte-buddy'
@@ -591,16 +594,16 @@ platform_definition:
       - 'org.apache.activemq:activemq-stomp'
       - 'org.apache.activemq:activemq-web'
       - 'org.apache.activemq:activemq-web-console'
-      - 'org.apache.activemq:artemis-selector'
-      - 'org.apache.activemq:artemis-journal'
-      - 'org.apache.activemq:artemis-server'
-      - 'org.apache.activemq:artemis-native'
       - 'org.apache.activemq:artemis-amqp-protocol'
-      - 'org.apache.activemq:artemis-core-client'
       - 'org.apache.activemq:artemis-commons'
+      - 'org.apache.activemq:artemis-core-client'
+      - 'org.apache.activemq:artemis-journal'
+      - 'org.apache.activemq:artemis-native'
+      - 'org.apache.activemq:artemis-selector'
+      - 'org.apache.activemq:artemis-server'
       - 'org.apache.activemq:artemis-service-extensions'
-      - 'org.apache.openjpa:openjpa'
       - 'org.apache.httpcomponents:httpcore'
+      - 'org.apache.logging.log4j:log4j-1.2-api'
       - 'org.apache.logging.log4j:log4j-api-scala_2.10'
       - 'org.apache.logging.log4j:log4j-api-scala_2.11'
       - 'org.apache.logging.log4j:log4j-flume-ng'
@@ -612,7 +615,7 @@ platform_definition:
       - 'org.apache.logging.log4j:log4j-nosql'
       - 'org.apache.logging.log4j:log4j-taglib'
       - 'org.apache.logging.log4j:log4j-web'
-      - 'org.apache.logging.log4j:log4j-1.2-api'
+      - 'org.apache.openjpa:openjpa'
       - 'org.apache.poi:poi-scratchpad'
       - 'org.apache.shiro:shiro-core'
       - 'org.apache.shiro:shiro-web'
@@ -639,6 +642,10 @@ platform_definition:
       - 'org.codehaus.jackson:jackson-core-asl'
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jdt.core.compiler:ecj'
+      - 'org.eclipse.jetty.http2:http2-client'
+      - 'org.eclipse.jetty.http2:http2-common'
+      - 'org.eclipse.jetty.http2:http2-hpack'
+      - 'org.eclipse.jetty.http2:http2-server'
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
       - 'org.eclipse.jetty:apache-jsp'
       - 'org.eclipse.jetty:apache-jstl'
@@ -646,13 +653,26 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-continuation'
       - 'org.eclipse.jetty:jetty-deploy'
       - 'org.eclipse.jetty:jetty-http'
+      - 'org.eclipse.jetty:jetty-http-spi'
+      - 'org.eclipse.jetty:jetty-infinispan'
       - 'org.eclipse.jetty:jetty-io'
+      - 'org.eclipse.jetty:jetty-jaas'
+      - 'org.eclipse.jetty:jetty-jaspi'
       - 'org.eclipse.jetty:jetty-jmx'
+      - 'org.eclipse.jetty:jetty-jndi'
       - 'org.eclipse.jetty:jetty-jsp'
-      - 'org.eclipse.jetty:jetty-proxy'
+      - 'org.eclipse.jetty:jetty-monitor'
+      - 'org.eclipse.jetty:jetty-nosql'
       - 'org.eclipse.jetty:jetty-plus'
       - 'org.eclipse.jetty:jetty-proxy'
+      - 'org.eclipse.jetty:jetty-proxy'
+      - 'org.eclipse.jetty:jetty-quickstart'
+      - 'org.eclipse.jetty:jetty-rewrite'
+      - 'org.eclipse.jetty:jetty-runner'
       - 'org.eclipse.jetty:jetty-security'
+      - 'org.eclipse.jetty:jetty-spring'
+      - 'org.eclipse.jetty:jetty-start'
+      - 'org.eclipse.jetty:jetty-util-ajax'
       - 'org.eclipse.jetty:jetty-xml'
       - 'org.ehcache:ehcache-clustered'
       - 'org.ehcache:ehcache-transactions'
@@ -660,11 +680,11 @@ platform_definition:
       - 'org.firebirdsql.jdbc:jaybird-jdk17'
       - 'org.firebirdsql.jdbc:jaybird-jdk18'
       - 'org.glassfish.jersey.bundles.repackaged:jersey-guava'
-      - 'org.glassfish.jersey.media:jersey-media-jaxb'
       - 'org.glassfish.jersey.core:jersey-client'
-      - 'org.glassfish.jersey.media:jersey-media-multipart'
-      - 'org.glassfish.jersey.ext:jersey-entity-filtering'
       - 'org.glassfish.jersey.core:jersey-common'
+      - 'org.glassfish.jersey.ext:jersey-entity-filtering'
+      - 'org.glassfish.jersey.media:jersey-media-jaxb'
+      - 'org.glassfish.jersey.media:jersey-media-multipart'
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-java8'
       - 'org.hibernate:hibernate-jpamodelgen'
@@ -690,13 +710,13 @@ platform_definition:
       - 'org.seleniumhq.selenium:selenium-remote-driver'
       - 'org.seleniumhq.selenium:selenium-safari-driver'
       - 'org.seleniumhq.selenium:selenium-support'
-      - 'org.springframework.restdocs:spring-restdocs-asciidoctor'
       - 'org.slf4j:slf4j-jdk14'
       - 'org.slf4j:slf4j-simple'
       - 'org.spockframework:spock-core'
       - 'org.spockframework:spock-spring'
-      - 'org.springframework:springloaded'
       - 'org.springframework.boot:spring-boot-test-support'
+      - 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+      - 'org.springframework:springloaded'
       - 'org.xerial:sqlite-jdbc'
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
