Align with latest Spring Boot 2.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -522,7 +522,6 @@ platform_definition:
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.12'
       - 'com.fasterxml:classmate'
       - 'com.google.appengine:appengine-api-1.0-sdk'
-      - 'com.hazelcast:hazelcast-client'
       - 'com.hazelcast:hazelcast-hibernate52'
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.microsoft.sqlserver:mssql-jdbc'
@@ -715,6 +714,7 @@ platform_definition:
       - 'org.spockframework:spock-core'
       - 'org.spockframework:spock-spring'
       - 'org.springframework.boot:spring-boot-test-support'
+      - 'org.springframework.data:spring-data-geode'
       - 'org.springframework.restdocs:spring-restdocs-asciidoctor'
       - 'org.springframework:springloaded'
       - 'org.xerial:sqlite-jdbc'
