Align with latest Spring Boot 1.5.4 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -504,9 +504,7 @@ platform_definition:
       # that both it and the rest of the Platform do not depend upon directly
       - 'ch.qos.logback:logback-access'
       - 'ch.qos.logback:logback-core'
-      - 'commons-digester:commons-digester'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
-      - 'com.fasterxml:classmate'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
@@ -545,6 +543,7 @@ platform_definition:
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.10'
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.11'
       - 'com.fasterxml.jackson.module:jackson-module-scala_2.12'
+      - 'com.fasterxml:classmate'
       - 'com.google.appengine:appengine-api-1.0-sdk'
       - 'com.hazelcast:hazelcast-client'
       - 'com.hazelcast:hazelcast-hibernate4'
@@ -553,6 +552,7 @@ platform_definition:
       - 'com.microsoft.sqlserver:mssql-jdbc'
       - 'com.zaxxer:HikariCP'
       - 'com.zaxxer:HikariCP-java7'
+      - 'commons-digester:commons-digester'
       - 'io.dropwizard.metrics:metrics-ganglia'
       - 'io.dropwizard.metrics:metrics-graphite'
       - 'io.dropwizard.metrics:metrics-servlets'
@@ -590,15 +590,16 @@ platform_definition:
       - 'org.apache.activemq:activemq-stomp'
       - 'org.apache.activemq:activemq-web'
       - 'org.apache.activemq:activemq-web-console'
-      - 'org.apache.activemq:artemis-selector'
-      - 'org.apache.activemq:artemis-journal'
-      - 'org.apache.activemq:artemis-server'
-      - 'org.apache.activemq:artemis-native'
       - 'org.apache.activemq:artemis-amqp-protocol'
-      - 'org.apache.activemq:artemis-core-client'
       - 'org.apache.activemq:artemis-commons'
+      - 'org.apache.activemq:artemis-core-client'
+      - 'org.apache.activemq:artemis-journal'
+      - 'org.apache.activemq:artemis-native'
+      - 'org.apache.activemq:artemis-selector'
+      - 'org.apache.activemq:artemis-server'
       - 'org.apache.activemq:artemis-service-extensions'
       - 'org.apache.httpcomponents:httpcore'
+      - 'org.apache.logging.log4j:log4j-1.2-api'
       - 'org.apache.logging.log4j:log4j-api-scala_2.10'
       - 'org.apache.logging.log4j:log4j-api-scala_2.11'
       - 'org.apache.logging.log4j:log4j-flume-ng'
@@ -610,7 +611,6 @@ platform_definition:
       - 'org.apache.logging.log4j:log4j-nosql'
       - 'org.apache.logging.log4j:log4j-taglib'
       - 'org.apache.logging.log4j:log4j-web'
-      - 'org.apache.logging.log4j:log4j-1.2-api'
       - 'org.apache.poi:poi-scratchpad'
       - 'org.apache.taglibs:taglibs-standard-impl'
       - 'org.apache.taglibs:taglibs-standard-spec'
@@ -634,6 +634,10 @@ platform_definition:
       - 'org.codehaus.groovy:groovy-testng'
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jdt.core.compiler:ecj'
+      - 'org.eclipse.jetty.http2:http2-client'
+      - 'org.eclipse.jetty.http2:http2-common'
+      - 'org.eclipse.jetty.http2:http2-hpack'
+      - 'org.eclipse.jetty.http2:http2-server'
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
       - 'org.eclipse.jetty:apache-jsp'
       - 'org.eclipse.jetty:apache-jstl'
@@ -641,18 +645,36 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-continuation'
       - 'org.eclipse.jetty:jetty-deploy'
       - 'org.eclipse.jetty:jetty-http'
+      - 'org.eclipse.jetty:jetty-http-spi'
+      - 'org.eclipse.jetty:jetty-infinispan'
       - 'org.eclipse.jetty:jetty-io'
+      - 'org.eclipse.jetty:jetty-jaas'
+      - 'org.eclipse.jetty:jetty-jaspi'
       - 'org.eclipse.jetty:jetty-jmx'
+      - 'org.eclipse.jetty:jetty-jndi'
       - 'org.eclipse.jetty:jetty-jsp'
-      - 'org.eclipse.jetty:jetty-proxy'
+      - 'org.eclipse.jetty:jetty-nosql'
       - 'org.eclipse.jetty:jetty-plus'
+      - 'org.eclipse.jetty:jetty-proxy'
+      - 'org.eclipse.jetty:jetty-quickstart'
+      - 'org.eclipse.jetty:jetty-rewrite'
+      - 'org.eclipse.jetty:jetty-runner'
       - 'org.eclipse.jetty:jetty-security'
+      - 'org.eclipse.jetty:jetty-spring'
+      - 'org.eclipse.jetty:jetty-start'
+      - 'org.eclipse.jetty:jetty-util-ajax'
       - 'org.eclipse.jetty:jetty-xml'
       - 'org.ehcache:ehcache-clustered'
       - 'org.ehcache:ehcache-transactions'
       - 'org.firebirdsql.jdbc:jaybird-jdk16'
       - 'org.firebirdsql.jdbc:jaybird-jdk17'
       - 'org.firebirdsql.jdbc:jaybird-jdk18'
+      - 'org.glassfish.jersey.bundles.repackaged:jersey-guava'
+      - 'org.glassfish.jersey.core:jersey-client'
+      - 'org.glassfish.jersey.core:jersey-common'
+      - 'org.glassfish.jersey.ext:jersey-entity-filtering'
+      - 'org.glassfish.jersey.media:jersey-media-jaxb'
+      - 'org.glassfish.jersey.media:jersey-media-multipart'
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-java8'
       - 'org.hibernate:hibernate-jpamodelgen'
@@ -678,8 +700,8 @@ platform_definition:
       - 'org.slf4j:slf4j-simple'
       - 'org.spockframework:spock-core'
       - 'org.spockframework:spock-spring'
-      - 'org.springframework:springloaded'
       - 'org.springframework.boot:spring-boot-test-support'
+      - 'org.springframework:springloaded'
       - 'org.xerial:sqlite-jdbc'
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
