--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -361,9 +361,29 @@
 			</dependency>
 			<dependency>
 				<groupId>com.rometools</groupId>
-				<artifactId>rome-fetcher</artifactId>
+				<artifactId>rome-propono</artifactId>
 				<version>${rometools.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.rometools</groupId>
+				<artifactId>rome-opml</artifactId>
+				<version>${rometools.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.rometools</groupId>
+				<artifactId>rome-modules</artifactId>
+				<version>${rometools.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.rometools</groupId>
+				<artifactId>rome-certiorem</artifactId>
+				<version>${rometools.version}</version>
+			</dependency>	
+			<dependency>
+				<groupId>com.rometools</groupId>
+				<artifactId>rome-fetcher</artifactId>
+				<version>${rometools.version}</version>
+			</dependency>		
 			<dependency>
 				<groupId>com.splunk</groupId>
 				<artifactId>splunk</artifactId>
