Polish "Provide dependency management for all of ROME"
Closes gh-579

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -550,6 +550,10 @@ platform_definition:
       - 'com.hazelcast:hazelcast-hibernate5'
       - 'com.jayway.jsonpath:json-path-assert'
       - 'com.microsoft.sqlserver:mssql-jdbc'
+      - 'com.rometools:rome-modules'
+      - 'com.rometools:rome-certiorem'
+      - 'com.rometools:rome-opml'
+      - 'com.rometools:rome-propono'
       - 'com.zaxxer:HikariCP'
       - 'com.zaxxer:HikariCP-java7'
       - 'commons-digester:commons-digester'
