--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -19,7 +19,7 @@ platform_definition:
            - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-amqp
         - spring-rabbit
@@ -112,7 +112,7 @@ platform_definition:
         - spring-boot-starter-web-services
     - name: Spring Cloud Connectors
       groupId: org.springframework.cloud
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M1
       modules:
         - spring-cloud-core
         - spring-cloud-cloudfoundry-connector
@@ -124,53 +124,53 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M3
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M3
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -178,29 +178,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M3
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M3
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M3
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RC1
       modules:
         - spring-aop
         - spring-aspects
@@ -347,7 +347,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M1
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -382,7 +382,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M1
       modules:
         - spring-session
         - spring-session-data-redis
