--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -19,7 +19,7 @@ platform_definition:
            - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.0.M4
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-amqp
         - spring-rabbit
@@ -30,7 +30,7 @@ platform_definition:
           - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 4.0.0.BUILD-SNAPSHOT
+      version: 4.0.0.M2
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -124,53 +124,53 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.M3
+      version: 3.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.M3
+      version: 3.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -178,29 +178,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.M3
+      version: 5.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.M3
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.M3
+      version: 3.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.M3
+      version: 3.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.RC1
+      version: 5.0.0.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -291,7 +291,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.0.0.M1
+      version: 2.0.0.M2
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -332,7 +332,7 @@ platform_definition:
         - spring-plugin-metadata
     - name: Spring REST Docs
       groupId: org.springframework.restdocs
-      version: 1.2.1.BUILD-SNAPSHOT
+      version: 1.2.1.RELEASE
       modules:
         - spring-restdocs-asciidoctor
         - spring-restdocs-core
@@ -347,7 +347,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.M1
+      version: 5.0.0.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -394,7 +394,7 @@ platform_definition:
         tagPrefix:
     - name: Spring Social
       groupId: org.springframework.social
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       build:
         repository: https://github.com/spring-projects/spring-social
       modules:
@@ -404,7 +404,7 @@ platform_definition:
         - spring-social-web
     - name: Spring Social Facebook
       groupId: org.springframework.social
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M2
       build:
         repository: https://github.com/spring-projects/spring-social-facebook
       modules:
@@ -412,12 +412,12 @@ platform_definition:
         - spring-social-facebook-web
     - name: Spring Social LinkedIn
       groupId: org.springframework.social
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M2
       modules:
         - spring-social-linkedin
     - name: Spring Social Twitter
       groupId: org.springframework.social
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M2
       build:
         repository: https://github.com/spring-projects/spring-social-twitter
       modules:
@@ -556,6 +556,8 @@ platform_definition:
       - 'io.netty:netty-resolver-dns'
       - 'io.netty:netty-transport'
       - 'io.netty:netty-transport-native-epoll'
+      - 'io.netty:netty-transport-native-kqueue'
+      - 'io.netty:netty-transport-native-unix-common'
       - 'io.netty:netty-transport-rxtx'
       - 'io.netty:netty-transport-sctp'
       - 'io.netty:netty-transport-udt'
