--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -155,6 +155,7 @@
 		<tiles.version>3.0.7</tiles.version>
 		<tyrus.version>1.13.1</tyrus.version>
 		<typica.version>1.3</typica.version>
+		<vavr.version>0.9.0</vavr.version>
 		<webjars-json-editor.version>0.7.21</webjars-json-editor.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
 		<woodstox.version>4.4.1</woodstox.version>
@@ -483,6 +484,11 @@
 				<groupId>io.rest-assured</groupId>
 				<artifactId>rest-assured</artifactId>
 				<version>${rest-assured3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.vavr</groupId>
+				<artifactId>vavr</artifactId>
+				<version>${vavr.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.activation</groupId>
