--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -164,6 +164,7 @@
 		<tiles-request.version>1.0.6</tiles-request.version>
 		<tyrus.version>1.3.5</tyrus.version>
 		<typica.version>1.3</typica.version>
+		<vavr.version>0.9.0</vavr.version>
 		<velocity.version>1.7</velocity.version>
 		<velocity-tools-view.version>1.4</velocity-tools-view.version>
 		<webjars-json-editor.version>0.7.21</webjars-json-editor.version>
@@ -493,6 +494,11 @@
 				<groupId>io.netty</groupId>
 				<artifactId>netty-all</artifactId>
 				<version>${netty.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.vavr</groupId>
+				<artifactId>vavr</artifactId>
+				<version>${vavr.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.activation</groupId>
