Upgrade to Gradle 4.0 for Gradle-based tests

--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -28,8 +28,10 @@ configurations {
 	compile
 }
 
-task('resolveDependencies') << {
-	configurations.compile.resolve()
+task('resolveDependencies') {
+	doLast {
+		configurations.compile.resolve()
+	}
 }
 
 dependencies {
