--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -80,6 +80,7 @@
 		<guice.version>3.0</guice.version>
 		<hadoop.version>2.2.0</hadoop.version>
 		<hbase.version>0.96.2-hadoop2</hbase.version>
+		<hibernate-validator5.version>5.4.1.Final</hibernate-validator5.version>
 		<hessian.version>4.0.38</hessian.version>
 		<hive.version>0.12.0</hive.version>
 		<itext.version>2.1.7</itext.version>
@@ -863,6 +864,11 @@
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-all</artifactId>
 				<version>${hamcrest.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${hibernate-validator5.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.igniterealtime.smack</groupId>
